add new website from server na

--- a/xem-phim-bo/tru-nuong-cuoi-cung/index.html
+++ b/xem-phim-bo/tru-nuong-cuoi-cung/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1712,28 +1712,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1746,6 +1724,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1769,84 +1769,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loc-dinh-ky-2-than-long-giao" title="Lộc Đỉnh Ký 2: Thần Long Giáo">
+          <a class="list-top-movie-link" href="/phim-moi/diego-the-last-goodbye" title="Diego: The Last Goodbye">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loc-dinh-ky-2-than-long-giao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diego-the-last-goodbye-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lộc Đỉnh Ký 2: Thần Long Giáo
+             Diego: The Last Goodbye
             </span>
             <span class="list-top-movie-item-en">
-             Royal Tramp II
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-tu-2-tu-dai-danh-bo-2" title="Bộ Tứ 2 – Tứ Đại Danh Bổ 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-tu-2-tu-dai-danh-bo-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bộ Tứ 2 – Tứ Đại Danh Bổ 2
-            </span>
-            <span class="list-top-movie-item-en">
-             The Four 2
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tran-chien-ho-truong-tan" title="Trận chiến Hồ Trường Tân">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tran-chien-ho-truong-tan-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trận chiến Hồ Trường Tân
-            </span>
-            <span class="list-top-movie-item-en">
-             The Battle at Lake Changjin
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-uc-bi-giau-kin" title="Ký ức bị giấu kín">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-uc-bi-giau-kin-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ký ức bị giấu kín
-            </span>
-            <span class="list-top-movie-item-en">
-             Tabula Rasa
+             Diego: The Last Goodbye
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1857,21 +1791,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-san-quai-vat-ac-mong-cua-soi" title="Thợ săn quái vật: Ác mộng của Sói">
+          <a class="list-top-movie-link" href="/phim-moi/pho-fear-phan-1-1994" title="Phố Fear phần 1: 1994">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-quai-vat-ac-mong-cua-soi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pho-fear-phan-1-1994-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thợ săn quái vật: Ác mộng của Sói
+             Phố Fear phần 1: 1994
             </span>
             <span class="list-top-movie-item-en">
-             The Witcher: Nightmare of the Wolf
+             Fear Street Part 1: 1994
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hiep-xuat-sac" title="Nữ Hiệp Xuất Sắc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hiep-xuat-sac-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Hiệp Xuất Sắc
+            </span>
+            <span class="list-top-movie-item-en">
+             Fairy Charge Forward
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-dieu-ky" title="Tình Yêu Diệu Kỳ">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-dieu-ky-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tình Yêu Diệu Kỳ
+            </span>
+            <span class="list-top-movie-item-en">
+             My Secret Romance
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-nguoi-may" title="Toi, nguoi may">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-nguoi-may-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Toi, nguoi may
+            </span>
+            <span class="list-top-movie-item-en">
+             I, Robot
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
